@@ -12,7 +12,7 @@
 .\"   which should have been included with this file.  If this file is
 .\"   file is missing or damaged, see the license at "http://www.cups.org/".
 .\"
-.TH cupstestppd 1 "CUPS" "6 October 2009" "Apple Inc."
+.TH cupstestppd 1 "CUPS" "19 November 2009" "Apple Inc."
 .SH NAME
 cupstestppd \- test conformance of ppd files
 .SH SYNOPSIS
@@ -43,6 +43,10 @@ on the command-line. The second form tests the PPD file provided
 on the standard input.
 .SH OPTIONS
 \fIcupstestppd\fR supports the following options:
+.TP 5
+-I filename
+.br
+Ignores all PCFileName warnings.
 .TP 5
 -I filters
 .br
